--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -780,7 +780,7 @@
                         
                         <li class="nav-item">
                             <a class="nav-link {% if 'subscriptions_upgrade' in request.resolver_match.url_name %}active{% endif %}" 
-                               href="/business/{{ request.tenant.slug }}/business/subscriptions/upgrade/">
+                               href="/business/{{ request.tenant.slug }}/subscriptions/upgrade/">
                                 <i class="nav-icon fas fa-arrow-up"></i>
                                 <span class="nav-text">Upgrade Plan</span>
                             </a>
