--- a/templates/system_admin/subscription_plans.html
+++ b/templates/system_admin/subscription_plans.html
@@ -138,7 +138,7 @@
                         <i class="fas fa-list-alt fa-3x text-muted mb-3"></i>
                         <h5 class="text-muted">No subscription plans found</h5>
                         <p class="text-muted">Create your first subscription plan to get started.</p>
-                        <a href="/admin/subscriptions/subscriptionplan/add/" class="btn btn-primary">
+                        <a href="{% url 'system_admin:create_subscription_plan' %}" class="btn btn-primary">
                             <i class="fas fa-plus me-2"></i>Add First Plan
                         </a>
                     </div>
@@ -199,9 +199,8 @@
 function togglePlanStatus(planId, activate) {
     const action = activate ? 'activate' : 'deactivate';
     if (confirm(`Are you sure you want to ${action} this plan?`)) {
-        // In a real implementation, you'd make an AJAX call to update the status
-        // For now, we'll redirect to Django admin
-        window.location.href = `/admin/subscriptions/subscriptionplan/${planId}/change/`;
+        // Redirect to edit plan page where status can be updated
+        window.location.href = `/system-admin/subscription-plans/edit/${planId}/`;
     }
 }
 
